<resources>
    <string name="app_name">Flummox</string>
    <string name="welcome">Welcome to Flummox!!</string>
    <string name="click_me">Click ME</string>
    <string name="or_click_me">Or Click Me</string>
    <string name="sorry">Neither of these do anything, sorry!</string>
    <string name="told_ya">Told ya</string>
    <string name="i_do_something_though">I do something though!</string>
    <string name="what_did_you_think">What did you think?</string>
    <string name="color_button">Change Color</string>
    <string name="choose_color">Choose a color:</string>
    <string name="mystery">ĻȾmŤ⚙♔Ɔȟ¢ƔàÖ|Ȑ^ȸcØȡEb</string>
    <string name="secret_message">You have found our secret, swipe to continue</string>

    <!-- Dialog list options -->
    <string-array name="length_array">
        <item>Yes</item>
        <item>Yes</item>
        <item>Yes</item>
    </string-array>

    <string name="win">You Win... For Now         Swipe Left to Revert</string>

    <string-array name="pages">
        <item>"Welcome To The Next Stage"</item>
        <item>"C:"</item>
        <item>"C:\\Program Files (x86)"</item>
        <item>"C:\\Users"</item>
        <item>"C:\\Users\\Anonymous"</item>
        <item>"C:\\Users\\Anonymous\\Solution.exe"</item>
    </string-array>

    <string-array name="descriptions">
        <item>"Well don't try clicking this, it does nothing"</item>
        <item>File(s) found: C:\\Users</item>
        <item>File not found.</item>
        <item>You made it! Come back next week for further steps.           </item>
        <item>File not found.</item>
        <item>¯\\_(ツ)_/¯</item>
    </string-array>

    <!--  SETTINGS  -->
    <string name="settings">Settings</string>
    <string name="pref_title_theme">Dark theme</string>
    <string name="pref_description_theme">Turn on dark theme</string>
    <string name="pref_title_default_question">Default question</string>
    <string name="pref_title_subject_order">Subject order</string>
    <string name="pref_none">None</string>

    <string-array name="pref_subject_order">
        <item>Alphabetic</item>
        <item>Newest first</item>
        <item>Oldest first</item>
    </string-array>

    <string-array name="pref_subject_order_values">
        <item>alpha</item>
        <item>new_first</item>
        <item>old_first</item>
    </string-array>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="maybe_try_this">Maybe try this?</string>
    <string name="nope_still_nothing">Nope still nothing</string>
    <string name="rate_your_experience">Rate Your Experience</string>
    <string name="a_ui_ux_puzzle_game">A UI/UX Puzzle Game</string>
</resources>